--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
             <tr style="background-color:  #d84ccc; ">
               <td style=" line-height: 0; padding: 20px 1px; border: none;">
-                <a href="#"><img src="img/logo.png" alt="logo" width="200" style="max-width: 100%;"></a>
+                <a href="#"><img src="logo.png"
+                    alt="logo" width="200" style="max-width: 100%;"></a>
               </td>
             </tr>
 
